# e.Com_test

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/core/: determine_utils.py  mongo_db.py
app/template/: routes.py  services.py
test/: add_template_script.py  collection.json  params.py  test_script.py
