[tool.poetry]
name = "e-com-test"
version = "0.1.0"
description = ""
authors = ["Ainaz Kabirov <grimoruu@yandex.ru>"]
readme = "README.md"
packages = [{include = "e"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
black = "^23.11.0"
ruff = "^0.1.5"
mypy = "^1.7.0"
uvicorn = "^0.20.0"
pymongo = "^4.6.0"
python-multipart = "^0.0.6"
requests = "^2.31.0"
types-requests = "^2.31.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
